--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 <html lang="pt-Br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="./vue.min.js"></script>
-  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Techno Project</title>
 </head>
 
 <body>
   <div id="app">
-    <p>{{produtos}}</p>
+    <section class="produtos">
+      <div v-for="produto in produtos">
+        <img :src="produto.img" :alt="produto.nome" :key="produto.id" class="produto_img" />
+        <div class="produto_info">
+          <span class="produto_preco">{{produto.preco}}</span>
+          <h2 class="produto_nome">{{produto.nome}}</h2>
+        </div>
+    </section>
   </div>
-  <script src="/app.js">
-  </script>
+  <script src="/app.js"></script>
 </body>
+
 </html>
